--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,7 @@ h1 {
     }
     .card-link {
       padding: 8px 24px;
+      margin-bottom: 8px;
       border-radius: 4px;
       display: inline-block;
       background-color: var(--accent-color);
@@ -278,13 +279,6 @@ h1 {
       padding: 60px;
     }
   }
-}
-.heading {
-  font-size: 1.4em;
-  font-weight: 600;
-  padding-bottom: 1%;
-  letter-spacing: 1px;
-  text-transform: uppercase;
 }
 
 .btn-default,
@@ -317,15 +311,8 @@ h1 {
   position: relative;
   z-index: 2;
 }
-
-.contacts {
-  font-family: "Lato", sans-serif;
-  min-height: 60%;
-  height: 100%;
-  padding-bottom:22px;
-  background-color: #151515;
-}
-footer {
+.contact {
+  text-align: center;
   .title {
     color: #8e8e8e;
     padding-top: 32px;
