--- a/css/style.css
+++ b/css/style.css
@@ -49,19 +49,35 @@ a {
   height: 22px;
 }
 /* NAVIGATION */
-nav {
+.navbar {
+  position: fixed;
+  top: 0;
+  z-index: 10; 
   width: 100%;
   margin: 0 auto;
   padding: 20px 0;
-  background: var(--background-color);
   display: flex;
   justify-content: center;
+  -webkit-transition: all 300ms ease-in;
+    -moz-transition: all 300ms ease-in;
+    -o-transition: all 300ms ease-in;
+    transition: all 300ms ease-in;
+}
+.box-shadow {
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+}
+.hide {
+  top: -100px;
+}
+.navbar.slide-down {
+  top: 0px;
 }
 nav ul {
+  background: var(--background-color);
   list-style: none;
   text-align: center;
-  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   border-radius: 50px;
+  transition: all 0.3s ease-out;
 }
 nav ul li {
   display: inline-block;
@@ -105,7 +121,7 @@ nav.shift ul li a {
   z-index: 1;
 }
 nav.shift ul li a:hover {
-  color: #91640F;
+  color: var(--secondary-yellow-color);
 }
 nav.shift ul li a:after {
   display: block;
@@ -145,7 +161,14 @@ h1 {
 }
 .hero-container {
   margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
   min-height: calc(90vh - 80px);
+}
+.hero-container > .row {
+  width: 100%;
 }
 
 .memoji {
@@ -283,16 +306,16 @@ h1 {
 
 .btn-default,
 .btn-default:focus {
-  padding: 1% 1.6%;
+  padding: 8px 16px;
   font-size: 1.2em;
   font-weight: 400;
   letter-spacing: 1px;
-  text-transform: uppercase;
   color: #1a0146;
   background-color: var(--accent-color);
   transition: all 0.3s ease-in-out;
   border-radius: 1px;
   margin-top: 2%;
+  border-radius: 4px;
 }
 
 .btn-default:hover {
@@ -359,6 +382,11 @@ h1 {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .navbar.slide-down {
+    background-color: var(--background-color);
+  }
+}
 @media screen and (max-width: 425px) {
   .hero-container {
     margin-top: 0px;
