--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,8 @@ h1 {
       }
     }
     .card-link {
+      margin-left: 0;
+      margin-right: 8px;
       padding: 8px 24px;
       margin-bottom: 8px;
       border-radius: 4px;
@@ -333,6 +335,7 @@ h1 {
 .main-content {
   position: relative;
   z-index: 2;
+  margin-top: 100px;
 }
 .contact {
   text-align: center;
