--- a/css/style.css
+++ b/css/style.css
@@ -210,10 +210,10 @@ h1 {
 
 .portfolio,
 .about {
-  padding: 0px 0px 10% 0px;
-  .title {
-    padding-bottom: 40px;
-  }
+  padding: 16px 24px;
+}
+.title {
+  padding-bottom: 40px;
 }
 
 .group {
@@ -384,6 +384,11 @@ h1 {
   border-radius: 4px;
 }
 
+@media screen and (min-width: 992px) {
+  .portfolio-container {
+    width: 100%;
+  }
+}
 @media screen and (max-width: 768px) {
   .navbar.slide-down {
     background-color: var(--background-color);
