--- a/css/theme.css
+++ b/css/theme.css
@@ -1,8 +1,16 @@
 
 /* Theme toggle Button BEGIN */
-.theme-toggle {
-    background: none;
-    border: none;
+  .theme-toggle {
+    width: 48px;
+    height: 48px;
+    background-color: transparent;
+    border-radius: 50%;
+    border: 2px solid transparent;
+    transition: border 0.3s ease-in;
+  }
+  .theme-toggle:hover {
+    background: var(--background-color);
+    border: 2px solid var(--color);
   }
   .sun-and-moon > :is(.moon, .sun, .sun-beams) {
     transform-origin: center;
@@ -83,7 +91,7 @@
 [data-theme=dark] {
     --accent-color: #F1C40F;
     --secondary-yellow-color: #91640F;
-    /* --link-color: #ddd; */
+    --link-color: #ddd;
     --color: #ddd;
     --muted-color: #505e6b;
     --background-color: black;
